# pd-ai

./: README.md  compose.yml  config.py  main.py  pyproject.toml
pd_ai/: agent.py  helpers.py  main.py  models.py
pd_ai/adapters/: model_message_adapter.py
pd_ai/repository/: db.py  embeddings_repository.py  messages_repository.py
